css alignmnet fixes updated

--- a/web/themes/contrib/bootstrap5/css/niv.css
+++ b/web/themes/contrib/bootstrap5/css/niv.css
@@ -28,6 +28,29 @@ body{background-color:#eaeaea;}
 }
 
 /*custom css here */
+h4.label.js-form-required.form-required{font-weight:normal;}
+.webform-button--draft{   float: left; font-size: 14px;background-color: #198754;    border-color: #198754;}
+.webform-button--draft:hover{    color: #fff;
+  background-color: #157347;
+  border-color: #146c43;
+}
+.webform-button--next{font-size: 14px;}
+.webform-button--previous{    font-size: 14px;color: #000;
+  background-color: #ffc107;
+  border-color: #ffc107;}
+  .webform-button--previous:hover{color: #000;background-color: #ffca2c;
+    border-color: #ffc720;}
+.user-logged-in.path-assessment #edit-actions{width:100%;}
+.col-md-2.text-center span.d-block{background-color: #13388e;cursor: pointer;
+  padding: 20px 10px;
+  border-radius: 5px;}
+  .col-md-2.text-center span.d-block:hover{box-shadow: 4px 7px 4px 0px rgba(0,0,0,0.2);}
+.col-md-2.text-center span.d-block > a{color: #ffffff;
+  text-decoration: none;
+  line-height: 0;
+  font-size: 18px;
+  font-weight: 500;
+  text-transform: uppercase;}
 .form-item, .form-actions{margin:0 !important;}
 .js-form-item.form-item {margin-bottom:10px !important;}
 #edit-actions.form-actions{margin-top:20px !important}
